split truncate into it's own module, fixed attachemnts-list fixed height issue

--- a/client/sass/components/_attachment-list.scss
+++ b/client/sass/components/_attachment-list.scss
@@ -26,7 +26,7 @@
   }
 
   &.expanded .message-attachments-list {
-    height: 120px;
+    height: auto;
   }
   &.has-attachments .message-attachments-list {
     border-bottom: 1px solid $light-gray;
